unpackaged/main/default/objects/CMPL123__Address__c/CMPL123__Address__c.object-meta.xml
<CustomObject>
    <description>Addresses</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADD-{0000000000}</displayFormat>
        <label>Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>