unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Account__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Account__c</fullName>
        <description>The account which resides at the address.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>