unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Address_Line_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Address_Line_1__c</fullName>
        <description>Address Line 1 for the Account</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>