unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Address_Line_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Address_Line_2__c</fullName>
        <description>Address Line 2 for the Account</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>