unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>