unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Country__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>