unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Postal_Code__c</fullName>
        <description>Postal Code</description>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>