unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Primary_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the primary address for the account.  The primary account is used in reporting.</description>
        <label>Primary Address?</label>
        <type>Checkbox</type>
    </CustomField>