unpackaged/main/default/objects/CMPL123__Address__c/fields/CMPL123__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Type__c</fullName>
        <description>Address Type</description>
        <inlineHelpText>Address Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>